src/test/deca/syntax/valid/synt/class_decl_method.deca
/*
    Description: Declaration d'une methode dans une classe

    Résultat : OK
*/
class A{
    void x(){

    }
}
